--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -378,6 +378,9 @@
     <Filter Include="Euler\325">
       <UniqueIdentifier>{c40557d7-26af-4331-8154-e2b2b71d1c39}</UniqueIdentifier>
     </Filter>
+    <Filter Include="TopCoder\675-699\690">
+      <UniqueIdentifier>{4be58cf2-742e-4906-a719-f1189d49ef0a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="UVaOJ\105.cpp">
@@ -2788,6 +2791,15 @@
     </ClCompile>
     <ClCompile Include="UVa\1200\1203.cpp">
       <Filter>UVa\1200</Filter>
+    </ClCompile>
+    <ClCompile Include="TopCoder\SRM 675-699\SRM 690\DoubleString.cpp">
+      <Filter>TopCoder\675-699\690</Filter>
+    </ClCompile>
+    <ClCompile Include="TopCoder\SRM 675-699\SRM 690\GerrymanderEasy.cpp">
+      <Filter>TopCoder\675-699\690</Filter>
+    </ClCompile>
+    <ClCompile Include="TopCoder\SRM 675-699\SRM 690\WolfCardGame.cpp">
+      <Filter>TopCoder\675-699\690</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
